--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ragebots",
   "version": "0.0.1",
   "dependencies": {
-    "socket.io": "0.8.7"
+    "socket.io": "0.8.7",
+    "express": "2.5.0"
   }
 }
